# object_search_utils

./: README.md
object_search_action/: CMakeLists.txt  package.xml
object_search_action/action/: Search.action
object_search_gui/: CMakeLists.txt  package.xml  setup.py
object_search_gui/launch/: server.launch
object_search_gui/scripts/: fake_search_action.py  load.py  search_service_proxy.py  simple_action.py  simple_client.py
object_search_gui/src/object_search_gui/: client.py
object_search_gui/web_content/: index.html
object_search_utils/: CMakeLists.txt  package.xml
plane_segmentation/: CMakeLists.txt  package.xml
plane_segmentation/launch/: octomap.launch
plane_segmentation/src/: pcl_node.cpp
view_evaluation/: CMakeLists.txt  package.xml
view_evaluation/launch/: best_views.launch  best_views.launch~
view_evaluation/maps/: sp_tum_kitchen_octomap.bt
view_evaluation/src/: BestView_Client.cpp  BestViews.cpp  Vec33.cpp
view_evaluation/srv/: BestViews.srv  BestViewsVisualiser.srv
