<?xml version="1.0"?>
<package>
  <name>object_search_gui</name>
  <version>0.0.1</version>
  <description>A GUI for the object search, providing start/stop and feedback.</description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_twitter_bootstrap</build_depend>
  <build_depend>strands_webtools</build_depend>
  <build_depend>strands_webserver</build_depend>
<!--  <build_depend>ap_msgs</build_depend>   -->
  <run_depend>ros_twitter_bootstrap</run_depend>
  <run_depend>strands_webtools</run_depend>
  <run_depend>strands_webserver</run_depend>
<!--  <run_depend>ap_msgs</run_depend>    -->

</package>